# ChangeLog for games-sports/miniracer
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-sports/miniracer/ChangeLog,v 1.2 2005/06/04 16:55:18 mr_bones_ Exp $

*miniracer-1.04 (01 Jun 2005)

  01 Jun 2005; Michael Sterrett <mr_bones_@gentoo.org> +metadata.xml,
  +miniracer-1.04.ebuild:
  initial commit - ebuild submitted by Christoph Brill (egore) via bug #93056
