@@ -1,4 +1,4 @@
-MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
-MD5 1d3e49081315b095ad9e0a662d267d2d ChangeLog 426
-MD5 b4414d680060c0a1530fc6deddd14752 miniracer-1.04.ebuild 1058
+MD5 fde5caa3eea12bedb2bc8b13412d5de5 ChangeLog 523
 MD5 81b022d5b4771990abe58744bcd17e66 files/digest-miniracer-1.04 67
+MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
+MD5 be1b53dbac097df510e600a3fe1e1feb miniracer-1.04.ebuild 1293
