@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-sports/miniracer/miniracer-1.04.ebuild,v 1.1 2005/06/01 03:44:06 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-sports/miniracer/miniracer-1.04.ebuild,v 1.2 2006/01/13 22:07:29 genstef Exp $
 
 inherit games
 
@@ -13,10 +13,26 @@ SLOT="0"
 KEYWORDS="x86"
 IUSE=""
 
-DEPEND="virtual/opengl
-	virtual/x11
+RDEPEND="virtual/opengl
+	|| (
+		( x11-libs/libX11
+		x11-libs/libXext
+		x11-libs/libXxf86dga
+		x11-libs/libXxf86vm )
+		virtual/x11
+	)
 	media-libs/libsdl
 	media-libs/sdl-mixer"
+DEPEND="${RDEPEND}
+	|| (
+		( media-libs/mesa
+		x11-proto/xf86dgaproto
+		x11-proto/xf86vidmodeproto
+		x11-proto/xproto )
+		virtual/x11
+	)"
+
+
 
 src_unpack() {
 	unpack ${A}
