@@ -1,6 +1,9 @@
 # ChangeLog for games-sports/miniracer
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-sports/miniracer/ChangeLog,v 1.2 2005/06/04 16:55:18 mr_bones_ Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-sports/miniracer/ChangeLog,v 1.3 2006/01/13 22:07:29 genstef Exp $
+
+  13 Jan 2006; Stefan Schweizer <genstef@gentoo.org> miniracer-1.04.ebuild:
+  Add modular depends
 
 *miniracer-1.04 (01 Jun 2005)
 
